--- a/app/src/main/res/layout/item_issue_list.xml
+++ b/app/src/main/res/layout/item_issue_list.xml
@@ -6,14 +6,14 @@
     <data>
 
         <variable
-            name="viewModel"
-            type="com.tistory.jeongs0222.thingsflow.ui.main.MainViewModel" />
+            name="item"
+            type="com.tistory.jeongs0222.thingsflow.ui.main.MainUiModel" />
 
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guide_start"
@@ -23,35 +23,35 @@
             app:layout_constraintGuide_begin="20dp" />
 
         <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guide_end"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_end="20dp" />
+
+        <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guide_top"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             app:layout_constraintGuide_begin="20dp" />
 
-        <TextView
-            android:id="@+id/intro"
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guide_bottom"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/colorBlack"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            app:introText="@{viewModel.orgRepoValue}"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_end="20dp" />
+
+        <TextView
+            android:layout_width="@dimen/match_constraint"
+            android:layout_height="wrap_content"
+            android:text="@{item.title}"
+            app:layout_constraintBottom_toBottomOf="@id/guide_bottom"
+            app:layout_constraintEnd_toEndOf="@id/guide_end"
             app:layout_constraintStart_toStartOf="@id/guide_start"
             app:layout_constraintTop_toTopOf="@id/guide_top"
-            tools:text="Google / Dagger" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerView"
-            android:layout_width="@dimen/match_constraint"
-            android:layout_height="@dimen/match_constraint"
-            android:scrollbars="vertical"
-            app:issueList="@{viewModel.mainUiModelList}"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/intro" />
+            tools:text="#2157: Dagger gRPC" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
