--- a/app/src/main/res/layout/item_issue_list.xml
+++ b/app/src/main/res/layout/item_issue_list.xml
@@ -36,18 +36,11 @@
             android:orientation="horizontal"
             app:layout_constraintGuide_begin="20dp" />
 
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guide_bottom"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_end="20dp" />
-
         <TextView
             android:layout_width="@dimen/match_constraint"
             android:layout_height="wrap_content"
             android:text="@{item.title}"
-            app:layout_constraintBottom_toBottomOf="@id/guide_bottom"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@id/guide_end"
             app:layout_constraintStart_toStartOf="@id/guide_start"
             app:layout_constraintTop_toTopOf="@id/guide_top"
