RecyclerView Multi View Type 추가

--- a/app/src/main/res/layout/item_issue_title.xml
+++ b/app/src/main/res/layout/item_issue_title.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="item"
-            type="com.tistory.jeongs0222.thingsflow.ui.main.MainUiModel" />
+            type="com.tistory.jeongs0222.thingsflow.ui.main.MainUiModel.IssueTitle" />
 
     </data>
 
