--- a/app/src/main/res/layout/item_issue_image.xml
+++ b/app/src/main/res/layout/item_issue_image.xml
@@ -39,6 +39,7 @@
         <ImageView
             android:layout_width="@dimen/match_constraint"
             android:layout_height="wrap_content"
+            app:issueImage="@{item.image}"
             app:layout_constraintEnd_toEndOf="@id/guide_end"
             app:layout_constraintStart_toStartOf="@id/guide_start"
             app:layout_constraintTop_toTopOf="@id/guide_top" />
