RecyclerView Item onClickListener를 처리할 EventListener 추가

--- a/app/src/main/res/layout/item_issue_title.xml
+++ b/app/src/main/res/layout/item_issue_title.xml
@@ -9,11 +9,16 @@
             name="item"
             type="com.tistory.jeongs0222.thingsflow.ui.main.MainUiModel.IssueTitle" />
 
+        <variable
+            name="eventListener"
+            type="com.tistory.jeongs0222.thingsflow.ui.main.MainEventListener" />
+
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:onClick="@{() -> eventListener.issueTitleClickEvent()}">
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guide_start"
