MainActivity -> DetailActivity로 Intent 넘길때 인자로 number도 줘야해서 DetailArgs, MainUiModel.IssueTitle data class 수정

--- a/app/src/main/res/layout/item_issue_title.xml
+++ b/app/src/main/res/layout/item_issue_title.xml
@@ -18,7 +18,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="@{() -> eventListener.issueTitleClickEvent()}">
+        android:onClick="@{() -> eventListener.issueTitleClickEvent(item.number)}">
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guide_start"
